Bug#51111 ALTER LOGFILE GROUP missing error message